# protei

./: .gitmodules  README.md
protei/: CMakeLists.txt  assemble.sh  enter.sh  man.txt  server_config.json
protei/libraries/: CMakeLists.txt
protei/libraries/src/: web_server.cpp  web_server.hpp
protei/spdlog/: CMakeLists.txt  enter.sh  main.cpp
protei/src/: Client.cpp  Client.hpp  Makefile  Operator.cpp  Operator.hpp  a.out  clients_information.txt  main.cpp  server_config.json  web_server.cpp  web_server.hpp
protei/tests/: test_server.cpp
protei/timer/: a.out  boost.cpp  main.cpp
protei/tutor/: a.out  example.cpp  main.cpp
protei/tutor/lib_1/: lib_1.cpp  lib_1.hpp
protei/tutor/lib_2/: lib_2.cpp  lib_2.hpp
